--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,5 +12,5 @@
     <color name="colorBGshape">#FFC107</color>
     <color name="white">#FFFFFFFF</color>
     <color name="colorText">#FFFFFF</color>
-    <color name="green"> #A4C639</color>
+    <color name="green">#3bb44b</color>
 </resources>
